<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:id="@+id/prepage"
		android:background="@drawable/tab_one_normal"
		android:layout_width="80dip" android:layout_height="wrap_content">
		<TextView
			android:layout_height="wrap_content"
			android:text="@string/foot1"
			android:gravity="center"
			android:background="@drawable/home"
			android:layout_width="wrap_content"
			android:layout_gravity="center" android:textSize="12sp" android:paddingTop="23dip"/>
	</LinearLayout>
	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/line" />
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:background="@drawable/tab_one_normal"
		android:id="@+id/nextpage"
		android:layout_width="80dip">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/foot2"
			android:gravity="center"
			android:background="@drawable/publish"
			android:layout_gravity="center" android:textSize="12sp" android:paddingTop="23dip"/>
	</LinearLayout>
	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/line" />
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:id="@+id/topicmode"
		android:layout_height="wrap_content"
		android:background="@drawable/tab_one_normal"
		android:layout_width="80dip">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/foot3"
			android:gravity="center"
			android:background="@drawable/change"
			android:layout_gravity="center" android:textSize="12sp" android:paddingTop="23dip"/>
	</LinearLayout>
	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/line" />
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:id="@+id/more"
		android:layout_height="wrap_content"
		android:background="@drawable/tab_one_normal"
		android:layout_width="80dip">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/foot4"
			android:gravity="center"
			android:background="@drawable/more"
			android:layout_gravity="center" android:textSize="12sp" android:paddingTop="23dip"/>
	</LinearLayout>
</LinearLayout>
